# swagger.json
@@ -96,6 +96,22 @@
                 }
             }
         },
+        "/api/v1/general/settings": {
+            "get": {
+                "tags": [
+                    "general"
+                ],
+                "operationId": "GetSettings",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GetSettingsRes"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/general/summary": {
             "get": {
                 "tags": [
@@ -288,13 +304,21 @@
                 "global_xau_updated_at": {
                     "type": "string"
                 },
+                "tax_percentage": {
+                    "type": "number"
+                },
                 "xau_jewelry_price_gram": {
                     "type": "number"
                 },
                 "xau_price_gram": {
                     "type": "number"
-                },
-                "xau_price_ounce": {
+                }
+            }
+        },
+        "GetSettingsRes": {
+            "type": "object",
+            "properties": {
+                "tax_percentage": {
                     "type": "number"
                 }
             }
